Set nowrap on article title section. Add more white space at bottom of article to compensate for possible multiple line title. Change list style for ul. Fix scroll to top when navigating articles. Add sub-title in header.

--- a/core-bc/modules/client/src/app/component/article/article.component.scss
+++ b/core-bc/modules/client/src/app/component/article/article.component.scss
@@ -2,7 +2,7 @@ img {
   max-width: 100%;
 }
 
-#container {
+#article-container {
   height: 100%;
 }
 
@@ -13,12 +13,12 @@ h2 {
   padding-bottom: 12px;
 
   .fa-caret-right {
-    margin: 0 12px
+    margin: 0 16px
   }
 }
 
 .scroll-container {
   box-sizing: border-box;
   height: calc(100% - 40px);
-  padding-bottom: 24px;
+  padding-bottom: 50px;
 }
