--- a/core-bc/modules/client/src/app/component/content/content.component.scss
+++ b/core-bc/modules/client/src/app/component/content/content.component.scss
@@ -146,7 +146,7 @@ a:hover {
   font-size: .8em;
 
   &:before {
-    content: '\000BB ';
+    content: '\02013\000A0\000A0';
   }
 }
 .sub-chapter-link:hover {
