--- a/core-bc/modules/client/src/assets/scss/atoms/_heading.scss
+++ b/core-bc/modules/client/src/assets/scss/atoms/_heading.scss
@@ -1,7 +1,7 @@
 h2 {
   font-weight: 500;
-  font-size: 1.7em;
-  line-height: 120%;
+  font-size: 1.6em;
+  line-height: 130%;
   margin-bottom: .2em;
 }
 
