--- a/core-bc/modules/client/src/styles.scss
+++ b/core-bc/modules/client/src/styles.scss
@@ -31,3 +31,7 @@
 .scroll-container {
   overflow-y: scroll;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
